added inside_poly method in bidimvec

--- a/UIs/nInterpolatePath.ui
+++ b/UIs/nInterpolatePath.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>203</width>
-    <height>110</height>
+    <width>205</width>
+    <height>144</height>
    </rect>
   </property>
   <property name="font">
@@ -25,20 +25,45 @@
    <property name="layoutDirection">
     <enum>Qt::LeftToRight</enum>
    </property>
-   <layout class="QGridLayout" name="gridLayout" columnstretch="1,0">
-    <item row="4" column="1">
-     <widget class="QPushButton" name="duplicate">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0" colspan="2">
+     <widget class="QComboBox" name="image">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="neutrinoImage" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
       <property name="text">
-       <string>Keep a copy</string>
+       <string>Weight:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="1" column="1">
+     <widget class="QDoubleSpinBox" name="weight">
+      <property name="value">
+       <double>2.000000000000000</double>
+      </property>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
      <widget class="QPushButton" name="doIt">
       <property name="font">
        <font>
@@ -50,15 +75,15 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="QComboBox" name="image">
+    <item row="2" column="1">
+     <widget class="QPushButton" name="duplicate">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
-      <property name="neutrinoImage" stdset="0">
-       <bool>true</bool>
+      <property name="text">
+       <string>Keep a copy</string>
       </property>
      </widget>
     </item>
