some fixes in nInterferomtry and nWavelet

--- a/UIs/nInterferometry.ui
+++ b/UIs/nInterferometry.ui
@@ -603,7 +603,7 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QCheckBox" name="interpolate">
+        <widget class="QCheckBox" name="useInterpolate">
          <property name="toolTip">
           <string>Enable Abel</string>
          </property>
