added min/max cutoff on abel

--- a/UIs/nIntegralInversion.ui
+++ b/UIs/nIntegralInversion.ui
@@ -22,7 +22,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_3" rowstretch="0,0,1,0" columnstretch="1,0,0">
+   <layout class="QGridLayout" name="gridLayout_3" rowstretch="0,0,1,0,0,0" columnstretch="1,0,0">
     <property name="margin">
      <number>4</number>
     </property>
@@ -264,7 +264,7 @@ K[H2]=2.01e-6, K[He]=5.23e-7, K[Ar]=4.2e-6
       </widget>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="5" column="0">
      <widget class="QPushButton" name="doInversion">
       <property name="font">
        <font>
@@ -276,7 +276,7 @@ K[H2]=2.01e-6, K[He]=5.23e-7, K[Ar]=4.2e-6
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="5" column="1">
      <widget class="QCheckBox" name="autoUpdate">
       <property name="text">
        <string>AutoUpdate</string>
@@ -286,7 +286,7 @@ K[H2]=2.01e-6, K[He]=5.23e-7, K[Ar]=4.2e-6
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
+    <item row="5" column="2">
      <widget class="QCheckBox" name="erasePrevious">
       <property name="font">
        <font>
@@ -543,6 +543,60 @@ K[H2]=2.01e-6, K[He]=5.23e-7, K[Ar]=4.2e-6
        <item row="0" column="0" colspan="4">
         <widget class="QComboBox" name="image">
          <property name="neutrinoImage" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="3">
+     <widget class="QWidget" name="widget" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="label_8">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Min:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="minCut">
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_7">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Max:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="maxCut">
+         <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
          </property>
         </widget>
