--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>293</width>
-    <height>214</height>
+    <height>235</height>
    </rect>
   </property>
   <property name="font">
@@ -190,7 +190,7 @@
        <attribute name="title">
         <string>Computation</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0">
+       <layout class="QGridLayout" name="gridLayout_2" columnstretch="0">
         <property name="margin">
          <number>4</number>
         </property>
@@ -233,7 +233,7 @@
           </layout>
          </widget>
         </item>
-        <item row="1" column="0">
+        <item row="3" column="0">
          <widget class="QCheckBox" name="useCuda">
           <property name="font">
            <font>
@@ -249,17 +249,18 @@
          </widget>
         </item>
         <item row="2" column="0">
-         <spacer name="verticalSpacer">
+         <widget class="Line" name="line">
           <property name="orientation">
-           <enum>Qt::Vertical</enum>
+           <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPlainTextEdit" name="infoCores">
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
-         </spacer>
+         </widget>
         </item>
        </layout>
       </widget>
