--- a/UIs/nLineoutBoth.ui
+++ b/UIs/nLineoutBoth.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>356</width>
-    <height>390</height>
+    <width>364</width>
+    <height>362</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,16 +27,6 @@
     <property name="margin">
      <number>0</number>
     </property>
-    <item row="0" column="0">
-     <widget class="QwtPlot" name="plot">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="0">
      <widget class="QCheckBox" name="autoscale">
       <property name="font">
@@ -52,6 +42,37 @@
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QToolButton" name="lockClick">
+      <property name="text">
+       <string>...</string>
+      </property>
+      <property name="icon">
+       <iconset resource="../resources/neutrino.qrc">
+        <normaloff>:/icons/autoRefresh.png</normaloff>
+        <normalon>:/icons/noAutoRefresh.png</normalon>:/icons/autoRefresh.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>10</width>
+        <height>10</height>
+       </size>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <widget class="QwtPlot" name="plot">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
      </widget>
     </item>
