--- a/UIs/nInterferometry.ui
+++ b/UIs/nInterferometry.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>345</width>
-    <height>514</height>
+    <height>546</height>
    </rect>
   </property>
   <property name="font">
@@ -38,6 +38,9 @@
        <string>Carrier</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1,1,0,0">
+       <property name="verticalSpacing">
+        <number>3</number>
+       </property>
        <property name="margin">
         <number>0</number>
        </property>
@@ -434,6 +437,9 @@
          <property name="toolTip">
           <string>Change sign of phase</string>
          </property>
+         <property name="layoutDirection">
+          <enum>Qt::RightToLeft</enum>
+         </property>
          <property name="text">
           <string>±</string>
          </property>
@@ -678,6 +684,9 @@
        <string>Plasma: Res &amp;&amp; lambda</string>
       </property>
       <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,1,0">
+       <property name="verticalSpacing">
+        <number>3</number>
+       </property>
        <property name="margin">
         <number>0</number>
        </property>
